from model.entities.animal import Animal


class Crab(Animal):
    ...


class Fish(Animal):
    ...
