from model.entities.plant import Plant


class Plankton(Plant):

    def __init__(self):
        super().__init__()
