from model.entities.plant import Plant


class Algae(Plant):
    ...


class Tree(Plant):
    ...
