@startuml class diagram

abstract class Entity {
    -Long id
    -int[] kidsAmountRange
    -int age
    -float hunger
    --
    +list[Entity] {abstract} generateKids()
    +void eat()
}

class Simulation {
    -Grid grid
    -Region[] regions
    -int step
    --
    +void run()
    +void stepType()
    +void stepWeather()
    +void stepEntities()
}

class Grid {
    -Case[][] cases
    -int size
}

abstract class Case {
    -Entity entity
    --
    {abstract} +Entity[] getPossibleEntities()
}

class Land {
    
}

class Water {
    
}

class Weather {
    -temperature
}

class Region {
    -Case[] cases
    -Weather weather
}


class Fish {

}

class Human {

}

abstract class Animal {
    -{static} Entity[] preys
    -Entity[] localPreys
}

abstract class Plant {
}

class Tree {
}

class Plankton {
}

class Cow {
}

Entity <-- Animal
Entity <-- Plant

Animal <-- Human
Animal <-- Fish
Animal <-- Cow

Plant <-- Tree
Plant <-- Plankton

Case <-- Land
Case <-- Water

note right of Entity::localPreys
    Each entity from a same specie
    has a slightly different set of preys
end note

@enduml